testdata/baselines/reference/compiler/checkJsJSDocModifiersInClass.errors.txt
test.js(6,3): error TS4121: This member cannot have a JSDoc comment with an '@override' tag because its containing class 'NoBase' does not extend another class.


==== test.js (1 errors) ====
    // Unlike object literal members, JSDoc modifiers on class members are still
    // semantically validated under checkJs: @override without a base class errors.
    
    class NoBase {
      /** @override */
      foo() {
      ~~~
!!! error TS4121: This member cannot have a JSDoc comment with an '@override' tag because its containing class 'NoBase' does not extend another class.
      }
    }
    
    class Base {
      foo() {
      }
    }
    
    class Derived extends Base {
      /** @override */
      foo() {
      }
    }
    